エラーページ再実装

--- a/public/500.html
+++ b/public/500.html
@@ -16,14 +16,11 @@ img{
 }
   </style>
 </head>
-
-<body class="rails-default-error-page">
+<body>
   <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
+  <div class="error">
+    <img src="/500.png">
+    <p>Internal Server Error</p>
   </div>
 </body>
 </html>
